--- a/Code/Roberts/CRoberts_Housing_Bias.ipynb
+++ b/Code/Roberts/CRoberts_Housing_Bias.ipynb
@@ -22,178 +22,6 @@
    "outputs": [
     {
      "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "activity_year",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "census_tract",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "derived_race",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "action_taken",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "loan_amount",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "property_value",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "income",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "interest_rate",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "tract_minority_population_percent",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "tract_to_msa_income_percentage",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "denial_reason-1",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "covenant_count",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "was_approved",
-         "rawType": "bool",
-         "type": "boolean"
-        },
-        {
-         "name": "covenant_density",
-         "rawType": "object",
-         "type": "unknown"
-        }
-       ],
-       "conversionMethod": "pd.DataFrame",
-       "ref": "12583db6-7bea-417c-b926-7065bba4d1dc",
-       "rows": [
-        [
-         "0",
-         "2023",
-         "27037060737.0",
-         "Race Not Available",
-         "6",
-         "185000.0",
-         "195000.0",
-         null,
-         "6.125",
-         "40.37",
-         "73.48",
-         "10",
-         "0.0",
-         "False",
-         null
-        ],
-        [
-         "1",
-         "2023",
-         "27141030504.0",
-         "Race Not Available",
-         "6",
-         "375000.0",
-         "385000.0",
-         null,
-         "6.625",
-         "10.64",
-         "121.26",
-         "10",
-         "0.0",
-         "False",
-         null
-        ],
-        [
-         "2",
-         "2023",
-         "27023950400.0",
-         "Race Not Available",
-         "6",
-         "105000.0",
-         "105000.0",
-         null,
-         "6.125",
-         "8.92",
-         "90.13",
-         "10",
-         "0.0",
-         "False",
-         null
-        ],
-        [
-         "3",
-         "2023",
-         "27171100101.0",
-         "Race Not Available",
-         "6",
-         "285000.0",
-         "285000.0",
-         null,
-         "6.75",
-         "13.27",
-         "104.37",
-         "10",
-         "0.0",
-         "False",
-         null
-        ],
-        [
-         "4",
-         "2023",
-         "27159480100.0",
-         "Race Not Available",
-         "6",
-         "175000.0",
-         "175000.0",
-         null,
-         "6.875",
-         "5.87",
-         "82.22",
-         "10",
-         "0.0",
-         "False",
-         null
-        ]
-       ],
-       "shape": {
-        "columns": 14,
-        "rows": 5
-       }
-      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -362,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -395,6 +223,59 @@
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predictive Modeling - Based on Hennepin County dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Split the data into training and test sets\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "train, test = train_test_split(df, test_size=0.3, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Support Vector Machine"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Analysis and Comparison of Model Performance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predictive Modeling - Applying the models to Ramsey County dataset"
    ]
   }
  ],
