--- a/Code/housing-data-student-notebook.ipynb
+++ b/Code/housing-data-student-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
     "### Historical Housing Discrimination\n",
     "Racial covenants were legal clauses in property deeds that prohibited sale or occupancy by non-white people. These discriminatory practices, along with redlining and other systematic forms of housing discrimination, shaped the demographic and economic patterns we see in our cities today. While racial covenants were made illegal by the Fair Housing Act of 1968, their effects continue to influence modern housing patterns, property values, and wealth distribution.\n",
     "\n",
-    "The Mapping Prejudice Project at the University of Minnesota has documented over 30,000 racial covenants in Hennepin County. These covenants, implemented between 1910 and 1955, created lasting patterns of segregation and economic disparity that persist in modern data.\n",
+    "The Mapping Prejudice Project at the University of Minnesota has documented over 30,000 racial covenants in ramsey County. These covenants, implemented between 1910 and 1955, created lasting patterns of segregation and economic disparity that persist in modern data.\n",
     "\n",
     "### Modern Mortgage Lending\n",
     "Today, most mortgage lending decisions involve algorithmic systems that assess credit risk and determine loan approval. While these systems don't explicitly consider race, they may perpetuate historical biases through:\n",
@@ -63,7 +63,7 @@
     "### Original Data Sources (For Reference and Extension Work)\n",
     "1. **Mapping Prejudice Project**\n",
     "   - URL: https://mappingprejudice.umn.edu/\n",
-    "   - Contains: Historical covenant data for Hennepin County\n",
+    "   - Contains: Historical covenant data for ramsey County\n",
     "   - Format: GIS data showing covenant locations and details\n",
     "\n",
     "2. **Census TIGER/LINE Files**\n",
@@ -99,7 +99,7 @@
     "### 3. Ramsey County Extension (20%)\n",
     "Extend the analysis to Ramsey County:\n",
     "1. Gather data from the provided sources\n",
-    "2. Adapt the analysis methods from Hennepin County\n",
+    "2. Adapt the analysis methods from ramsey County\n",
     "3. Compare patterns between counties\n",
     "4. Document challenges and limitations\n",
     "\n",
@@ -133,7 +133,7 @@
     "\n",
     "## Technical Resources\n",
     "- You will receive access to:\n",
-    "  - Preprocessed dataset for Hennepin County\n",
+    "  - Preprocessed dataset for ramsey County\n",
     "  - Python notebook showing data preparation steps\n",
     "  - Sample visualization code\n",
     "\n",
@@ -173,7 +173,7 @@
     "       Lastname3/\n",
     "       Lastname4/\n",
     "     Data/\n",
-    "       hennepin_analysis.csv\n",
+    "       ramsey_analysis.csv\n",
     "       [Additional datasets]\n",
     "     Collaboration/\n",
     "       WeekA.docx\n",
@@ -199,7 +199,7 @@
     "\n",
     "### Step 3: Initial Data Exploration\n",
     "\n",
-    "1. Download and examine the provided Hennepin County dataset\n",
+    "1. Download and examine the provided ramsey County dataset\n",
     "2. Review documentation of data sources:\n",
     "   - Mapping Prejudice Project\n",
     "   - Census TIGER/LINE files\n",
@@ -238,7 +238,7 @@
     "\n",
     "1. Collect required datasets\n",
     "2. Apply analysis methodology\n",
-    "3. Compare results with Hennepin County\n",
+    "3. Compare results with ramsey County\n",
     "4. Document challenges and limitations\n",
     "\n",
     "### Step 8: Complete Final Report\n",
@@ -297,13 +297,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -316,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,21 +319,22 @@
     "from shapely.geometry import Point\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "\n",
+    "import os\n",
+    "import sys\n",
     "\n",
     "# Read the full state file\n",
-    "mn_tracts = gpd.read_file('tl_2024_27_tract.zip')\n",
+    "mn_tracts = gpd.read_file('../Data/tl_2024_27_tract.zip')\n",
+    "os.getcwd(), \"../..\", \n",
+    "# Filter for Ramsey County (FIPS code 123)\n",
+    "ramsey_tracts = mn_tracts[mn_tracts['COUNTYFP'] == '123']\n",
     "\n",
-    "# Filter for Hennepin County (FIPS code 053)\n",
-    "hennepin_tracts = mn_tracts[mn_tracts['COUNTYFP'] == '053']\n",
-    "\n",
-    "# Save just Hennepin County if you want\n",
-    "hennepin_tracts.to_file('hennepin_tracts.shp')"
+    "# Save just ramsey County if you want\n",
+    "ramsey_tracts.to_file('ramsey_tracts.shp')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -360,15 +354,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jwallin\\AppData\\Local\\Temp\\ipykernel_7176\\83746537.py:1: DtypeWarning: Columns (22,23,24,26,27,28,29,30,31,32,33,38,44) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  mortgage_data = pd.read_csv('state_MN.csv')\n"
+      "C:\\Users\\chanc\\AppData\\Local\\Temp\\ipykernel_9288\\2219985529.py:1: DtypeWarning: Columns (22,23,24,26,27,28,29,30,31,32,33,38,44) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  mortgage_data = pd.read_csv('../Data/state_MN.csv')\n"
      ]
     },
     {
@@ -414,20 +408,20 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mortgage_data = pd.read_csv('state_MN.csv')\n",
+    "mortgage_data = pd.read_csv('../Data/state_MN.csv')\n",
     "mheaders = mortgage_data.columns\n",
     "mheaders"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +430,7 @@
        "(174738, 99)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,26 +463,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['FID', 'Doc_ID', 'Deed_ID', 'Racial_Res', 'Type_Res', 'Addition',\n",
-       "       'City', 'Block', 'Lot', 'Grantor', 'Grantee', 'Date_Deed', 'Date_Ex',\n",
-       "       'Ex_Year', 'Join_ID', 'Workflow', 'Rel_Score', 'X', 'Y', 'Address',\n",
-       "       'Distance'],\n",
+       "Index(['db_id', 'workflow', 'cnty_name', 'cnty_fips', 'doc_num', 'deed_year',\n",
+       "       'deed_date', 'exec_date', 'cov_text', 'seller', 'buyer', 'street_add',\n",
+       "       'city', 'state', 'zip_code', 'add_cov', 'block_cov', 'lot_cov',\n",
+       "       'cnty_pin', 'add_mod', 'block_mod', 'lot_mod', 'ph_dsc_mod',\n",
+       "       'join_strgs', 'geocd_addr', 'geocd_dist', 'cov_type', 'match_type',\n",
+       "       'manual_cx', 'dt_updated', 'zn_subj_id', 'zn_dt_ret', 'image_ids',\n",
+       "       'med_score', 'plat_dbid', 'subd_dbid'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "covenent = pd.read_csv('Hennepin_County_Racial_Covenants_Table.csv')\n",
+    "covenent = pd.read_csv('../Data/Ramsey_County_Racial_Covenants_Table.csv')\n",
     "cheaders = covenent.columns\n",
     "cheaders"
    ]
@@ -502,16 +499,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "\"None of [Index(['FID', 'Racial_Res', 'Date_Deed', 'X', 'Y'], dtype='object')] are in the [columns]\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m covenant_slim \u001b[38;5;241m=\u001b[39m covenent[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFID\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRacial_Res\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDate_Deed\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mX\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mY\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\pandas\\core\\frame.py:4108\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4106\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m is_iterator(key):\n\u001b[0;32m   4107\u001b[0m         key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(key)\n\u001b[1;32m-> 4108\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39m_get_indexer_strict(key, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcolumns\u001b[39m\u001b[38;5;124m\"\u001b[39m)[\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m   4110\u001b[0m \u001b[38;5;66;03m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[0;32m   4111\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(indexer, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdtype\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mbool\u001b[39m:\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\pandas\\core\\indexes\\base.py:6200\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[1;34m(self, key, axis_name)\u001b[0m\n\u001b[0;32m   6197\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   6198\u001b[0m     keyarr, indexer, new_indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[1;32m-> 6200\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_raise_if_missing(keyarr, indexer, axis_name)\n\u001b[0;32m   6202\u001b[0m keyarr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtake(indexer)\n\u001b[0;32m   6203\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Index):\n\u001b[0;32m   6204\u001b[0m     \u001b[38;5;66;03m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\pandas\\core\\indexes\\base.py:6249\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[1;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[0;32m   6247\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m nmissing:\n\u001b[0;32m   6248\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m nmissing \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mlen\u001b[39m(indexer):\n\u001b[1;32m-> 6249\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNone of [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m] are in the [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00maxis_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   6251\u001b[0m     not_found \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[38;5;241m.\u001b[39mnonzero()[\u001b[38;5;241m0\u001b[39m]]\u001b[38;5;241m.\u001b[39munique())\n\u001b[0;32m   6252\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnot_found\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m not in index\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mKeyError\u001b[0m: \"None of [Index(['FID', 'Racial_Res', 'Date_Deed', 'X', 'Y'], dtype='object')] are in the [columns]\""
+     ]
+    }
+   ],
    "source": [
     "covenant_slim = covenent[['FID', 'Racial_Res', 'Date_Deed', 'X', 'Y']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -596,13 +608,13 @@
     "print(\"Y range:\", covenant_gdf.geometry.y.min(), \"to\", covenant_gdf.geometry.y.max())\n",
     "\n",
     "# Verify these points fall within tract bounds\n",
-    "tract_bounds = hennepin_tracts.total_bounds\n",
+    "tract_bounds = ramsey_tracts.total_bounds\n",
     "print(\"\\nTract bounds:\")\n",
     "print(\"X range:\", tract_bounds[0], \"to\", tract_bounds[2])\n",
     "print(\"Y range:\", tract_bounds[1], \"to\", tract_bounds[3])\n",
     "\n",
     "# Perform spatial join with transformed coordinates\n",
-    "covenants_with_tracts = gpd.sjoin(covenant_gdf, hennepin_tracts, how='left', predicate='within')\n",
+    "covenants_with_tracts = gpd.sjoin(covenant_gdf, ramsey_tracts, how='left', predicate='within')\n",
     "\n",
     "# See how many points matched to tracts\n",
     "print(\"\\nPoints that matched to tracts:\", len(covenants_with_tracts))\n",
@@ -620,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +795,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "orbits",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -797,7 +809,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
