--- a/Code/Brown/ABrown_Housing_Bias.ipynb
+++ b/Code/Brown/ABrown_Housing_Bias.ipynb
@@ -709,6 +709,412 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>STATEFP</th>\n",
+       "      <th>COUNTYFP</th>\n",
+       "      <th>TRACTCE</th>\n",
+       "      <th>GEOID</th>\n",
+       "      <th>GEOIDFQ</th>\n",
+       "      <th>NAME</th>\n",
+       "      <th>NAMELSAD</th>\n",
+       "      <th>MTFCC</th>\n",
+       "      <th>FUNCSTAT</th>\n",
+       "      <th>ALAND</th>\n",
+       "      <th>AWATER</th>\n",
+       "      <th>INTPTLAT</th>\n",
+       "      <th>INTPTLON</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>124</th>\n",
+       "      <td>27</td>\n",
+       "      <td>123</td>\n",
+       "      <td>040102</td>\n",
+       "      <td>27123040102</td>\n",
+       "      <td>1400000US27123040102</td>\n",
+       "      <td>401.02</td>\n",
+       "      <td>Census Tract 401.02</td>\n",
+       "      <td>G5020</td>\n",
+       "      <td>S</td>\n",
+       "      <td>5810969</td>\n",
+       "      <td>3545673</td>\n",
+       "      <td>+45.1150726</td>\n",
+       "      <td>-093.0093805</td>\n",
+       "      <td>POLYGON ((-93.03584 45.09738, -93.03317 45.097...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125</th>\n",
+       "      <td>27</td>\n",
+       "      <td>123</td>\n",
+       "      <td>040804</td>\n",
+       "      <td>27123040804</td>\n",
+       "      <td>1400000US27123040804</td>\n",
+       "      <td>408.04</td>\n",
+       "      <td>Census Tract 408.04</td>\n",
+       "      <td>G5020</td>\n",
+       "      <td>S</td>\n",
+       "      <td>3309782</td>\n",
+       "      <td>1257720</td>\n",
+       "      <td>+45.0454768</td>\n",
+       "      <td>-093.1591990</td>\n",
+       "      <td>POLYGON ((-93.17755 45.04262, -93.17753 45.042...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126</th>\n",
+       "      <td>27</td>\n",
+       "      <td>123</td>\n",
+       "      <td>040101</td>\n",
+       "      <td>27123040101</td>\n",
+       "      <td>1400000US27123040101</td>\n",
+       "      <td>401.01</td>\n",
+       "      <td>Census Tract 401.01</td>\n",
+       "      <td>G5020</td>\n",
+       "      <td>S</td>\n",
+       "      <td>7508445</td>\n",
+       "      <td>910515</td>\n",
+       "      <td>+45.1070109</td>\n",
+       "      <td>-093.0401804</td>\n",
+       "      <td>POLYGON ((-93.05678 45.12401, -93.05642 45.124...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>127</th>\n",
+       "      <td>27</td>\n",
+       "      <td>123</td>\n",
+       "      <td>040708</td>\n",
+       "      <td>27123040708</td>\n",
+       "      <td>1400000US27123040708</td>\n",
+       "      <td>407.08</td>\n",
+       "      <td>Census Tract 407.08</td>\n",
+       "      <td>G5020</td>\n",
+       "      <td>S</td>\n",
+       "      <td>2940007</td>\n",
+       "      <td>678592</td>\n",
+       "      <td>+45.0735909</td>\n",
+       "      <td>-093.1325218</td>\n",
+       "      <td>POLYGON ((-93.14738 45.07939, -93.14613 45.079...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128</th>\n",
+       "      <td>27</td>\n",
+       "      <td>123</td>\n",
+       "      <td>040709</td>\n",
+       "      <td>27123040709</td>\n",
+       "      <td>1400000US27123040709</td>\n",
+       "      <td>407.09</td>\n",
+       "      <td>Census Tract 407.09</td>\n",
+       "      <td>G5020</td>\n",
+       "      <td>S</td>\n",
+       "      <td>3242565</td>\n",
+       "      <td>107945</td>\n",
+       "      <td>+45.0660386</td>\n",
+       "      <td>-093.1162382</td>\n",
+       "      <td>POLYGON ((-93.14722 45.0647, -93.1451 45.06471...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    STATEFP COUNTYFP TRACTCE        GEOID               GEOIDFQ    NAME  \\\n",
+       "124      27      123  040102  27123040102  1400000US27123040102  401.02   \n",
+       "125      27      123  040804  27123040804  1400000US27123040804  408.04   \n",
+       "126      27      123  040101  27123040101  1400000US27123040101  401.01   \n",
+       "127      27      123  040708  27123040708  1400000US27123040708  407.08   \n",
+       "128      27      123  040709  27123040709  1400000US27123040709  407.09   \n",
+       "\n",
+       "                NAMELSAD  MTFCC FUNCSTAT    ALAND   AWATER     INTPTLAT  \\\n",
+       "124  Census Tract 401.02  G5020        S  5810969  3545673  +45.1150726   \n",
+       "125  Census Tract 408.04  G5020        S  3309782  1257720  +45.0454768   \n",
+       "126  Census Tract 401.01  G5020        S  7508445   910515  +45.1070109   \n",
+       "127  Census Tract 407.08  G5020        S  2940007   678592  +45.0735909   \n",
+       "128  Census Tract 407.09  G5020        S  3242565   107945  +45.0660386   \n",
+       "\n",
+       "         INTPTLON                                           geometry  \n",
+       "124  -093.0093805  POLYGON ((-93.03584 45.09738, -93.03317 45.097...  \n",
+       "125  -093.1591990  POLYGON ((-93.17755 45.04262, -93.17753 45.042...  \n",
+       "126  -093.0401804  POLYGON ((-93.05678 45.12401, -93.05642 45.124...  \n",
+       "127  -093.1325218  POLYGON ((-93.14738 45.07939, -93.14613 45.079...  \n",
+       "128  -093.1162382  POLYGON ((-93.14722 45.0647, -93.1451 45.06471...  "
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Ramsay = mn[mn['COUNTYFP'] == '123']\n",
+    "Ramsay.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FID</th>\n",
+       "      <th>Doc_ID</th>\n",
+       "      <th>Deed_ID</th>\n",
+       "      <th>Racial_Res</th>\n",
+       "      <th>Type_Res</th>\n",
+       "      <th>Addition</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Block</th>\n",
+       "      <th>Lot</th>\n",
+       "      <th>Grantor</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Date_Deed</th>\n",
+       "      <th>Date_Ex</th>\n",
+       "      <th>Ex_Year</th>\n",
+       "      <th>Join_ID</th>\n",
+       "      <th>Workflow</th>\n",
+       "      <th>Rel_Score</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>Distance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>49</td>\n",
+       "      <td>A773853</td>\n",
+       "      <td>782_0191</td>\n",
+       "      <td>No lots in this tract shall be sold or leased ...</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>LATHAMS MINNETONKA BLVD TRACT</td>\n",
+       "      <td>ST. LOUIS PARK</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Albert C. &amp; Helen R. Jerome</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10/13/1915</td>\n",
+       "      <td>7/31/1915 0:00</td>\n",
+       "      <td>1915</td>\n",
+       "      <td>LATHAMS MINNETONKA BLVD TRACT 2 2</td>\n",
+       "      <td>Zooniverse -- Abstracts</td>\n",
+       "      <td>6.334158823</td>\n",
+       "      <td>-93.34578024</td>\n",
+       "      <td>44.95182267</td>\n",
+       "      <td>5201 28th Street West, Saint Louis Park, 55416</td>\n",
+       "      <td>1.02267222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>52</td>\n",
+       "      <td>A2376250</td>\n",
+       "      <td>1687_0285</td>\n",
+       "      <td>No lot, plot, or parcel shall be sold, leased,...</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>EDINA HIGHLANDS</td>\n",
+       "      <td>EDINA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>33</td>\n",
+       "      <td>Frank J. Hannan</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6/21/1946</td>\n",
+       "      <td>6/19/1946 0:00</td>\n",
+       "      <td>1946</td>\n",
+       "      <td>EDINA HIGHLANDS 1 33</td>\n",
+       "      <td>Zooniverse -- Abstracts</td>\n",
+       "      <td>6.522148932</td>\n",
+       "      <td>-93.36129742</td>\n",
+       "      <td>44.90583662</td>\n",
+       "      <td>24 Address Unassigned, Edina, 55436</td>\n",
+       "      <td>3.27298356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>96</td>\n",
+       "      <td>A1974111</td>\n",
+       "      <td>1449_0279</td>\n",
+       "      <td>No lot, plot, or parcel shall be sold, leased,...</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>SOUTH WHITE OAKS ADDN</td>\n",
+       "      <td>EDINA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>George A. Specht and Casimira Specht</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5/25/1939</td>\n",
+       "      <td>5/25/1939 0:00</td>\n",
+       "      <td>1939</td>\n",
+       "      <td>SOUTH WHITE OAKS ADDN 1 1</td>\n",
+       "      <td>Zooniverse -- Abstracts</td>\n",
+       "      <td>6.522148932</td>\n",
+       "      <td>-93.33199805</td>\n",
+       "      <td>44.91587472</td>\n",
+       "      <td>4801 Townes Road, Edina, 55424</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>229</td>\n",
+       "      <td>M1645505</td>\n",
+       "      <td></td>\n",
+       "      <td>premises shall not be sold, or leased, or occu...</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>WILCOX PARK MPLS</td>\n",
+       "      <td>MINNEAPOLIS</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Florence H. &amp; Charles S. Brearly</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6/10/1931</td>\n",
+       "      <td>6/14/1930 0:00</td>\n",
+       "      <td>1930</td>\n",
+       "      <td>WILCOX PARK MPLS 3 9</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-93.31142311</td>\n",
+       "      <td>45.03225707</td>\n",
+       "      <td>4233 Russell Avenue North, Minneapolis, 55412</td>\n",
+       "      <td>0.19121998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>247</td>\n",
+       "      <td>A1556488</td>\n",
+       "      <td>1188_0100</td>\n",
+       "      <td>no person or persons other than of the Caucasi...</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>NOKOMIS SOUTH PARK ADDN TO MPLS</td>\n",
+       "      <td>MINNEAPOLIS</td>\n",
+       "      <td>8</td>\n",
+       "      <td>20</td>\n",
+       "      <td>George Pahl and Sophia Pahl</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8/29/1929</td>\n",
+       "      <td>5/21/1929 0:00</td>\n",
+       "      <td>1929</td>\n",
+       "      <td>NOKOMIS SOUTH PARK ADDN TO MPLS 8 20</td>\n",
+       "      <td>Zooniverse -- Abstracts</td>\n",
+       "      <td>6.334158823</td>\n",
+       "      <td>-93.23324648</td>\n",
+       "      <td>44.90227124</td>\n",
+       "      <td>5543 27th Avenue South, Minneapolis, 55417</td>\n",
+       "      <td>1.28148487</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   FID    Doc_ID    Deed_ID  \\\n",
+       "0   49   A773853   782_0191   \n",
+       "1   52  A2376250  1687_0285   \n",
+       "2   96  A1974111  1449_0279   \n",
+       "3  229  M1645505              \n",
+       "4  247  A1556488  1188_0100   \n",
+       "\n",
+       "                                          Racial_Res Type_Res  \\\n",
+       "0  No lots in this tract shall be sold or leased ...       NA   \n",
+       "1  No lot, plot, or parcel shall be sold, leased,...       NA   \n",
+       "2  No lot, plot, or parcel shall be sold, leased,...       NA   \n",
+       "3  premises shall not be sold, or leased, or occu...       NA   \n",
+       "4  no person or persons other than of the Caucasi...       NA   \n",
+       "\n",
+       "                          Addition            City Block Lot  \\\n",
+       "0    LATHAMS MINNETONKA BLVD TRACT  ST. LOUIS PARK     2   2   \n",
+       "1                  EDINA HIGHLANDS           EDINA     1  33   \n",
+       "2            SOUTH WHITE OAKS ADDN           EDINA     1   1   \n",
+       "3                 WILCOX PARK MPLS     MINNEAPOLIS     3   9   \n",
+       "4  NOKOMIS SOUTH PARK ADDN TO MPLS     MINNEAPOLIS     8  20   \n",
+       "\n",
+       "                                Grantor  ...   Date_Deed         Date_Ex  \\\n",
+       "0           Albert C. & Helen R. Jerome  ...  10/13/1915  7/31/1915 0:00   \n",
+       "1                       Frank J. Hannan  ...   6/21/1946  6/19/1946 0:00   \n",
+       "2  George A. Specht and Casimira Specht  ...   5/25/1939  5/25/1939 0:00   \n",
+       "3      Florence H. & Charles S. Brearly  ...   6/10/1931  6/14/1930 0:00   \n",
+       "4           George Pahl and Sophia Pahl  ...   8/29/1929  5/21/1929 0:00   \n",
+       "\n",
+       "  Ex_Year                               Join_ID                 Workflow  \\\n",
+       "0    1915     LATHAMS MINNETONKA BLVD TRACT 2 2  Zooniverse -- Abstracts   \n",
+       "1    1946                  EDINA HIGHLANDS 1 33  Zooniverse -- Abstracts   \n",
+       "2    1939             SOUTH WHITE OAKS ADDN 1 1  Zooniverse -- Abstracts   \n",
+       "3    1930                  WILCOX PARK MPLS 3 9                   Manual   \n",
+       "4    1929  NOKOMIS SOUTH PARK ADDN TO MPLS 8 20  Zooniverse -- Abstracts   \n",
+       "\n",
+       "     Rel_Score             X            Y  \\\n",
+       "0  6.334158823  -93.34578024  44.95182267   \n",
+       "1  6.522148932  -93.36129742  44.90583662   \n",
+       "2  6.522148932  -93.33199805  44.91587472   \n",
+       "3            0  -93.31142311  45.03225707   \n",
+       "4  6.334158823  -93.23324648  44.90227124   \n",
+       "\n",
+       "                                          Address    Distance  \n",
+       "0  5201 28th Street West, Saint Louis Park, 55416  1.02267222  \n",
+       "1             24 Address Unassigned, Edina, 55436  3.27298356  \n",
+       "2                  4801 Townes Road, Edina, 55424           0  \n",
+       "3   4233 Russell Avenue North, Minneapolis, 55412  0.19121998  \n",
+       "4      5543 27th Avenue South, Minneapolis, 55417  1.28148487  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_path = '/Users/ashlyn/Desktop/DATA 6550/data/Hennepin_County_Racial_Covenants_Table.csv'\n",
+    "\n",
+    "hpmn = gpd.read_file(file_path)\n",
+    "\n",
+    "hpmn.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
