--- a/Code/Brown/ABrown_HousingBias.ipynb
+++ b/Code/Brown/ABrown_HousingBias.ipynb
@@ -685,22 +685,27 @@
    "id": "58840337-8558-4b1b-af61-25e787f8c77c",
    "metadata": {},
    "source": [
-    "🔹 Final Summary of Key Findings for Your Report\n",
-    "1️⃣ Property Values\n",
-    "✅ Statistically significant difference in property values between covenanted and non-covenanted areas.\n",
-    "✅ Covenanted areas tend to have lower property values, likely due to long-term economic effects of racial covenants.\n",
+    "### Final Summary of Key Findings of this Report\n",
     "\n",
-    "2️⃣ Minority Population\n",
-    "✅ Higher minority population percentages in some former covenanted areas.\n",
-    "✅ This could indicate demographic shifts due to urban policy changes.\n",
     "\n",
-    "3️⃣ Household Income\n",
-    "✅ Statistically significant difference in median family income.\n",
-    "✅ Covenanted areas tend to have lower household incomes, suggesting generational economic disparities.\n",
+    "Property Values\n",
+    "Statistically significant difference in property values between covenanted and non-covenanted areas.\n",
+    "Covenanted areas tend to have lower property values, likely due to long-term economic effects of racial covenants.\n",
     "\n",
-    "4️⃣ Homeownership Rates\n",
-    "✅ Statistically significant difference in owner-occupied units.\n",
-    "✅ Covenanted areas had lower homeownership rates, reinforcing the idea that racial covenants restricted wealth-building opportunities for affected groups."
+    "\n",
+    "Minority Population\n",
+    "Higher minority population percentages in some former covenanted areas.\n",
+    "This could indicate demographic shifts due to urban policy changes.\n",
+    "\n",
+    "\n",
+    "Household Income\n",
+    "Statistically significant difference in median family income.\n",
+    "Covenanted areas tend to have lower household incomes, suggesting generational economic disparities.\n",
+    "\n",
+    "\n",
+    "Homeownership Rates\n",
+    "Statistically significant difference in owner-occupied units.\n",
+    "Covenanted areas had lower homeownership rates, reinforcing the idea that racial covenants restricted wealth-building opportunities for affected groups."
    ]
   },
   {
