--- a/Code/Brown/ABrown_HousingBias.ipynb
+++ b/Code/Brown/ABrown_HousingBias.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "966b87c4-368d-4bae-b480-65bcd4e53d08",
+   "metadata": {},
+   "source": [
+    "### Ashlyn Brown\n",
+    "### March 13, 2025\n",
+    "### DATA 6550 \n",
+    "### Housing Bias Project\n",
+    "### Group 6"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "278ef3ce-652e-403b-a972-8bb815d389fd",
