Fixed covenant_count for datasets
.to_crs(epsg=26915)

--- a/Code/hennepin_housing-data-student-notebook.ipynb
+++ b/Code/hennepin_housing-data-student-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
     "hennepin_tracts = mn_tracts[mn_tracts['COUNTYFP'] == '053']\n",
     "\n",
     "# Save just Hennepin County if you want\n",
-    "hennepin_tracts.to_file('../Data/hennepin_tracts.shp')"
+    "#hennepin_tracts.to_file('../Data/hennepin_tracts.shp')"
    ]
   },
   {
@@ -347,14 +347,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\chanc\\AppData\\Local\\Temp\\ipykernel_24300\\2219985529.py:1: DtypeWarning: Columns (22,23,24,26,27,28,29,30,31,32,33,38,44) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\chanc\\AppData\\Local\\Temp\\ipykernel_16680\\2219985529.py:1: DtypeWarning: Columns (22,23,24,26,27,28,29,30,31,32,33,38,44) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  mortgage_data = pd.read_csv('../Data/state_MN.csv')\n"
      ]
     },
@@ -401,7 +401,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        "(174738, 99)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -546,23 +546,21 @@
       "Y range: 44.785106 to 45.246618\n",
       "\n",
       "Points that matched to tracts: 24119\n",
-      "Points with null tract assignments: 24119\n",
+      "Points with null tract assignments: 0\n",
       "\n",
       "Tract Summary:\n",
-      "Number of tracts with covenants: 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\chanc\\AppData\\Local\\Temp\\ipykernel_24300\\204365392.py:23: UserWarning: CRS mismatch between the CRS of left geometries and the CRS of right geometries.\n",
-      "Use `to_crs()` to reproject one of the input geometries to match the CRS of the other.\n",
+      "Number of tracts with covenants: 162\n",
       "\n",
-      "Left CRS: EPSG:26915\n",
-      "Right CRS: EPSG:4269\n",
-      "\n",
-      "  covenants_with_tracts = gpd.sjoin(covenant_gdf, hennepin_tracts, how='left', predicate='within')\n"
+      "Covenant counts per tract:\n",
+      "count    162.000000\n",
+      "mean     148.882716\n",
+      "std      201.416363\n",
+      "min        1.000000\n",
+      "25%        9.000000\n",
+      "50%       69.500000\n",
+      "75%      205.000000\n",
+      "max      965.000000\n",
+      "Name: covenant_count, dtype: float64\n"
      ]
     }
    ],
@@ -589,6 +587,7 @@
     "print(\"Y range:\", tract_bounds[1], \"to\", tract_bounds[3])\n",
     "\n",
     "# Perform spatial join with transformed coordinates\n",
+    "hennepin_tracts = hennepin_tracts.to_crs(epsg=26915)\n",
     "covenants_with_tracts = gpd.sjoin(covenant_gdf, hennepin_tracts, how='left', predicate='within')\n",
     "\n",
     "# See how many points matched to tracts\n",
@@ -607,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -665,16 +664,21 @@
       "Name: census_tract, dtype: object\n",
       "\n",
       "Covenant data examples:\n",
-      "Series([], Name: census_tract, dtype: object)\n",
+      "0    27053000101\n",
+      "1    27053000102\n",
+      "2    27053000300\n",
+      "3    27053000601\n",
+      "4    27053000603\n",
+      "Name: census_tract, dtype: object\n",
       "\n",
       "Merge Results:\n",
       "Total mortgage applications: 100931\n",
-      "Applications in tracts with covenants: 0\n",
-      "Unique tracts with covenants: 0\n",
+      "Applications in tracts with covenants: 11169\n",
+      "Unique tracts with covenants: 161\n",
       "\n",
       "Approval Rates:\n",
-      "Tracts with no covenants: 0.6646619968097017\n",
-      "Tracts with covenants: nan\n"
+      "Tracts with no covenants: 0.6638666696374858\n",
+      "Tracts with covenants: 0.6710538096517146\n"
      ]
     }
    ],
@@ -745,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +762,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +852,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "6f9d584d-b9b5-4f71-9ef9-1eefa0efa1e0",
+       "ref": "ed2a9a6f-32e5-4f68-ac94-cf074347e5bf",
        "rows": [
         [
          "0",
@@ -1439,7 +1443,7 @@
          "29.71",
          "98.77",
          "10",
-         "0.0",
+         "68.0",
          "False"
         ],
         [
@@ -1928,7 +1932,7 @@
        "[100931 rows x 13 columns]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1939,22 +1943,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Create a function to create categories for 'covenant_density'\n",
     "def covenant_density(count):\n",
-    "    if count == 0:\n",
-    "        return 'None'\n",
-    "    elif 1 <= count <= 50:\n",
+    "    if 1 <= count <= 50:\n",
     "        return 'Low (1-50)'\n",
     "    elif 51 <= count <= 100:\n",
     "        return 'Medium (51-100)'\n",
     "    elif 101 <= count <= 200:\n",
     "        return 'High (101-200)'\n",
-    "    else:\n",
+    "    elif count > 200:\n",
     "        return 'Very High (>200)'\n",
+    "    else:\n",
+    "        return 'None'\n",
     "\n",
     "#Create a new column for 'covenant_density'\n",
     "combined_data['covenant_density'] = combined_data['covenant_count'].apply(covenant_density)"
@@ -1962,7 +1966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1972,16 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "combined_data.to_csv('../Data/hennepin_covenant_data.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -2070,7 +2065,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "d0e15f8e-4e7d-4a33-84d7-072bf69fe62b",
+       "ref": "f983f1ce-ab98-4e79-b434-2ffc6637c48e",
        "rows": [
         [
          "0",
@@ -2733,9 +2728,9 @@
          "29.71",
          "98.77",
          "10",
-         "0.0",
+         "68.0",
          "False",
-         "None",
+         "Medium (51-100)",
          "Hennepin"
         ],
         [
@@ -3287,13 +3282,22 @@
        "[100931 rows x 15 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "combined_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_data.to_csv('../Data/hennepin_covenant_data.csv', index=False)"
    ]
   }
  ],
